--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,7 @@ subprojects {
         implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:$jacksonVersion"
         implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
         implementation "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
-        runtimeOnly "com.h2database:h2:$h2Version"
+        implementation "com.h2database:h2:$h2Version"
 
         testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlinVersion"
 
